# genesis

./: .gitignore  atan2_lookup_table.asm  butt_enemy.asm  crab_spawner.asm  fireball.asm  fm_test.asm  hello.asm  hero_anim.asm  hero_state.asm  hot_dog_4way.asm  hot_dog_enemy.asm  ogre_enemy.asm  red_seal.asm  script_functions.asm  sine_lookup_table.asm  slime.asm  text.asm  util.asm  z80test.asm
art/: akai_seal.aseprite  all_palettes.asm  butt.aseprite  butt.asm  butt_slashed.aseprite  butt_slashed_left.asm  butt_slashed_right.asm  crab.aseprite  eye.aseprite  falling_hand.aseprite  fireball.aseprite  fireball.asm  font.aseprite  font.asm  future.aseprite  future.asm  grass.aseprite  groc_aisle.aseprite  ground.aseprite  hot_dog.aseprite  hot_dog_slashed.aseprite  hot_dog_slashed_left.asm  hot_dog_slashed_right.asm  hot_dog_sprite.asm  inverse_palette.asm  ogre.aseprite  ogre_slash.aseprite  ogre_slash_sprite.asm  ogre_slash_vertical.aseprite  ogre_slash_vertical.asm  ogre_sprite.asm  playfield.aseprite  red_seal.asm  samurai.aseprite  samurai_16x24_animated.aseprite  samurai_16x24_new.aseprite  samurai_sprite.asm  script.asm  simple_palette.asm  slash.aseprite  (+13 more)
art/tiles/: map3.asm  (+9 more)
aseprite_scripts/: 12bit-rgb.lua  copy-tileset-to-new-frame.lua  desaturate.lua  export-palette.lua  export-sprite.lua  export-tile-indexed.lua  export-tilemap-tiled.lua  export-tilemap.lua  export-tileset.lua  export_sprite_anim_3x3.lua  export_sprite_anim_4x4.lua  export_sprite_animation.lua  invert-colors.lua
tools_rs/: Cargo.toml
tools_rs/src/: tiled_converter.rs  trig_table_gen.rs
(+20 files in other folders)
